# VRender

./: .gitignore  README  README.md  README.plain  TODO
docs/: VRender-Курсовая_работа.odt  VRender-Презентация_слайды_libreoffice.odp  VRender-Презентация_слайды_openoffice.odp  ПримерыФункций.txt
libvrender/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1
libvrender/cmake/: mingw-toolchain.cmake
libvrender/include/: camera.h  common.h  gl_funcs.h  input.h  log.h  main_shader.h  marching_cubes.h  parser.h  render.h  shader.h  shader_program.h  shader_program_file.h  texture.h  thread.h  utils.h
libvrender/include/math/: dmath.h  matrix.h  noise.h  quaternion.h  vector.h
libvrender/src/: gl_funcs.c  input.c  log.c  parser.c  utils.c
libvrender/src/math/: dmath.c  matrix.c  noise.c  quaternion.c
libvrender/src/render/: camera.c  marching_cubes.c  render.c  shader.c  shader_program.c  shader_program_file.c  texture.c
libvrender/src/threads/: thread_linux.c  thread_win32.c
vrender-gui/: vrender-gui.pro  vrender-gui.pro.user.2.5pre1
vrender-gui/include/: glwindow.h  helpdialog.h  mainwindow.h
vrender-gui/res/: app.qrc  build_lang.xhtml  program_help.xhtml
vrender-gui/src/: glwindow.cpp  helpdialog.cpp  main.cpp  mainwindow.cpp
vrender-gui/ui/: helpdialog.ui  mainwindow.ui
